@@ -239,6 +239,30 @@ return|return
 literal|false
 return|;
 block|}
+annotation|@
+name|Override
+specifier|public
+name|boolean
+name|visitDbPath
+parameter_list|(
+name|EJBQLExpression
+name|expression
+parameter_list|,
+name|int
+name|finishedChildIndex
+parameter_list|)
+block|{
+return|return
+name|super
+operator|.
+name|visitDbPath
+argument_list|(
+name|expression
+argument_list|,
+name|finishedChildIndex
+argument_list|)
+return|;
+block|}
 block|}
 end_class
 
