@@ -3940,6 +3940,216 @@ index|]
 argument_list|)
 expr_stmt|;
 block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|testNullObjects
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|tArtist
+operator|.
+name|insert
+argument_list|(
+literal|1
+argument_list|,
+literal|"a1"
+argument_list|)
+expr_stmt|;
+name|tArtist
+operator|.
+name|insert
+argument_list|(
+literal|2
+argument_list|,
+literal|"a2"
+argument_list|)
+expr_stmt|;
+name|tArtist
+operator|.
+name|insert
+argument_list|(
+literal|3
+argument_list|,
+literal|"a3"
+argument_list|)
+expr_stmt|;
+name|tPainting
+operator|.
+name|insert
+argument_list|(
+literal|1
+argument_list|,
+literal|2
+argument_list|,
+literal|"title1"
+argument_list|)
+expr_stmt|;
+name|tPainting
+operator|.
+name|insert
+argument_list|(
+literal|2
+argument_list|,
+literal|1
+argument_list|,
+literal|"title2"
+argument_list|)
+expr_stmt|;
+name|tPainting
+operator|.
+name|insert
+argument_list|(
+literal|3
+argument_list|,
+literal|1
+argument_list|,
+literal|"title3"
+argument_list|)
+expr_stmt|;
+name|EJBQLQuery
+name|queryFullProduct
+init|=
+operator|new
+name|EJBQLQuery
+argument_list|(
+literal|"select a, p from Artist a, Painting p"
+argument_list|)
+decl_stmt|;
+name|List
+argument_list|<
+name|Object
+index|[]
+argument_list|>
+name|result1
+init|=
+name|context
+operator|.
+name|performQuery
+argument_list|(
+name|queryFullProduct
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|9
+argument_list|,
+name|result1
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|Object
+index|[]
+name|next
+range|:
+name|result1
+control|)
+block|{
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|next
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+name|assertNotNull
+argument_list|(
+name|next
+index|[
+literal|0
+index|]
+argument_list|)
+expr_stmt|;
+name|assertNotNull
+argument_list|(
+name|next
+index|[
+literal|1
+index|]
+argument_list|)
+expr_stmt|;
+block|}
+name|EJBQLQuery
+name|queryToOneRel
+init|=
+operator|new
+name|EJBQLQuery
+argument_list|(
+literal|"select p.toGallery+, p.toArtist+, p from Painting p"
+argument_list|)
+decl_stmt|;
+name|List
+argument_list|<
+name|Object
+index|[]
+argument_list|>
+name|result2
+init|=
+name|context
+operator|.
+name|performQuery
+argument_list|(
+name|queryToOneRel
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|3
+argument_list|,
+name|result2
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|Object
+index|[]
+name|next
+range|:
+name|result2
+control|)
+block|{
+name|assertNull
+argument_list|(
+name|next
+index|[
+literal|0
+index|]
+argument_list|)
+expr_stmt|;
+comment|// Gallery
+name|assertTrue
+argument_list|(
+name|next
+index|[
+literal|1
+index|]
+operator|instanceof
+name|Artist
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|next
+index|[
+literal|2
+index|]
+operator|instanceof
+name|Painting
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 block|}
 end_class
 
