@@ -125,6 +125,22 @@ name|testdo
 operator|.
 name|testmap
 operator|.
+name|Gallery
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|testdo
+operator|.
+name|testmap
+operator|.
 name|Painting
 import|;
 end_import
@@ -207,6 +223,16 @@ begin_import
 import|import
 name|java
 operator|.
+name|math
+operator|.
+name|BigInteger
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|sql
 operator|.
 name|SQLException
@@ -242,6 +268,18 @@ operator|.
 name|Assert
 operator|.
 name|assertEquals
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|junit
+operator|.
+name|Assert
+operator|.
+name|assertNull
 import|;
 end_import
 
@@ -870,6 +908,164 @@ parameter_list|)
 block|{
 comment|// expected
 block|}
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|testSQLTemplateSelectNullObjects
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|tPainting
+operator|.
+name|insert
+argument_list|(
+literal|1
+argument_list|,
+literal|null
+argument_list|,
+literal|"p1"
+argument_list|,
+name|BigInteger
+operator|.
+name|valueOf
+argument_list|(
+literal|10L
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|String
+name|sql
+init|=
+literal|"SELECT p.GALLERY_ID FROM PAINTING p"
+decl_stmt|;
+name|SQLTemplate
+name|q1
+init|=
+operator|new
+name|SQLTemplate
+argument_list|(
+name|Gallery
+operator|.
+name|class
+argument_list|,
+name|sql
+argument_list|)
+decl_stmt|;
+name|q1
+operator|.
+name|setColumnNamesCapitalization
+argument_list|(
+name|CapsStrategy
+operator|.
+name|UPPER
+argument_list|)
+expr_stmt|;
+name|List
+argument_list|<
+name|Gallery
+argument_list|>
+name|galleries
+init|=
+name|context
+operator|.
+name|performQuery
+argument_list|(
+name|q1
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|galleries
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertNull
+argument_list|(
+name|galleries
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+argument_list|(
+name|expected
+operator|=
+name|CayenneRuntimeException
+operator|.
+name|class
+argument_list|)
+specifier|public
+name|void
+name|testSQLTemplateSelectInvalid
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|tPainting
+operator|.
+name|insert
+argument_list|(
+literal|1
+argument_list|,
+literal|null
+argument_list|,
+literal|"p1"
+argument_list|,
+name|BigInteger
+operator|.
+name|valueOf
+argument_list|(
+literal|10L
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|String
+name|sql
+init|=
+literal|"SELECT p.PAINTING_TITLE FROM PAINTING p"
+decl_stmt|;
+name|SQLTemplate
+name|q1
+init|=
+operator|new
+name|SQLTemplate
+argument_list|(
+name|Gallery
+operator|.
+name|class
+argument_list|,
+name|sql
+argument_list|)
+decl_stmt|;
+name|q1
+operator|.
+name|setColumnNamesCapitalization
+argument_list|(
+name|CapsStrategy
+operator|.
+name|UPPER
+argument_list|)
+expr_stmt|;
+comment|// this should fail as result can't be converted to Gallery class
+name|context
+operator|.
+name|performQuery
+argument_list|(
+name|q1
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 end_class
